[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "formfactors-client-sdk"
version = "0.1.0"
description = "Python client SDK for the Nova Formfactors platform — REST APIs, NATS helpers, and mobile robot tooling"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
nats = ["nats-py>=2.0"]
novaflow = ["novaflow-client-sdk @ git+https://github.com/gpue/novaflow-client-sdk.git@v1.2.0"]
all = ["nats-py>=2.0", "novaflow-client-sdk @ git+https://github.com/gpue/novaflow-client-sdk.git@v1.2.0"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/formfactors_client_sdk"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
